🔧 Add sale complete api
